--- a/home/home.html
+++ b/home/home.html
@@ -1,73 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="../styles/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/style.css">
-</head>
-<body class="font p-3">
-    <div class="container p-3  my-3 rounded shadow mainColor d-flex align-items-center " style="min-height: 90vh;">
-        <div class="row align-items-center justify-content-between p-3">
-            
-            <div class="col-lg-6 col-md-12 text-center mb-4 mb-lg-0">
-                <img src="../images/home.svg" class="img-fluid" alt="Home">
-            </div>
-
-            
-            <div class="col-lg-6 col-md-12 ">
-                <div class=" row justify-content-between ">
-                    <div class=" col-md-4 col-12 text-center ">
-                        <div class=" parent shadow rounded py-4 px-2 ">
-                            <img src="../images/html.svg" class="img-fluid mb-2 " alt="HTML">
-                            <h4>HTML</h4>
-                            <button class="start btn btn-static lightBroun w-100" id="html">Start Exam</button>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-12 text-center">
-                        <div class="parent shadow rounded py-4 px-2">
-                            <img src="../images/css.svg" class="img-fluid mb-2" alt="CSS">
-                            <h4>CSS</h4>
-                            <button class="start btn btn-static lightBroun w-100" id="css">Start Exam</button>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-12 text-center">
-                        <div class="parent shadow rounded py-4 px-2">
-                            <img src="../images/js.svg" class="img-fluid mb-2" alt="JavaScript">
-                            <h4>JavaScript</h4>
-                            <button class="start btn btn-static lightBroun w-100" id="js">Start Exam</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <link rel="stylesheet" href="../styles/bootstrap.min.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
+  </head>
+  <body class="font p-3">
+    <div
+      class="container p-3 my-3 rounded shadow mainColor d-flex align-items-center"
+      style="min-height: 90vh"
+    >
+      <div class="row align-items-center justify-content-between p-3">
+        <div class="col-lg-6 col-md-12 text-center mb-4 mb-lg-0">
+          <img src="../images/home.svg" class="img-fluid" alt="Home" />
         </div>
+
+        <div class="col-lg-6 col-md-12">
+          <div class="row justify-content-between">
+            <div class="col-md-4 col-12 text-center">
+              <div class="parent shadow rounded py-4 px-2">
+                <img
+                  src="../images/html.svg"
+                  class="img-fluid mb-2"
+                  alt="HTML"
+                />
+                <h4>HTML</h4>
+                <button class="start btn btn-static lightBroun w-100" id="html">
+                  Start Exam
+                </button>
+              </div>
+            </div>
+            <div class="col-md-4 col-12 text-center">
+              <div class="parent shadow rounded py-4 px-2">
+                <img src="../images/css.svg" class="img-fluid mb-2" alt="CSS" />
+                <h4>CSS</h4>
+                <button class="start btn btn-static lightBroun w-100" id="css">
+                  Start Exam
+                </button>
+              </div>
+            </div>
+            <div class="col-md-4 col-12 text-center">
+              <div class="parent shadow rounded py-4 px-2">
+                <img
+                  src="../images/js.svg"
+                  class="img-fluid mb-2"
+                  alt="JavaScript"
+                />
+                <h4>JavaScript</h4>
+                <button class="start btn btn-static lightBroun w-100" id="js">
+                  Start Exam
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div id="boxContainer" class="position-fixed top-0 start-0 bottom-0 end-0 justify-content-center align-items-center d-none">
-        <div class="innerBox">
-            <div class="container p-5 rounded shadow mainColor text-center">
-                <h3 class="brownColor">Are you ready to start the exam?</h3>
-                <div class="row pt-4">
-                    <div class="col-6 mx-auto">
-                        <img src="" class="img-fluid" alt="">
-                    </div>
-                </div>
-                <div class="row pt-4">
-                    <div class="col-12">
-                        <button id="startExam" class="btn btn-static lightBroun p-2 w-100">Start the Exam</button>
-                    </div>
-                </div>
-                <div class="row pt-4">
-                    <div class="col-12">
-                        <button id="backHome" class="btn btn-outline brownColor p-2 w-100">Back Home</button>
-                    </div>
-                </div>
+    <div
+      id="boxContainer"
+      class="position-fixed top-0 start-0 bottom-0 end-0 justify-content-center align-items-center d-none"
+    >
+      <div class="innerBox">
+        <div class="container p-5 rounded shadow mainColor text-center">
+          <h3 class="lightBroun">Are you ready to start the exam?</h3>
+          <div class="row pt-4">
+            <div class="col-6 mx-auto">
+              <img src="" class="img-fluid" alt="" />
             </div>
+          </div>
+          <div class="row pt-4">
+            <div class="col-12">
+              <button
+                id="startExam"
+                class="btn btn-static lightBroun p-2 w-100"
+              >
+                Start the Exam
+              </button>
+            </div>
+          </div>
+          <div class="row pt-4">
+            <div class="col-12">
+              <button
+                id="backHome"
+                class="btn btn-outline brownColor p-2 w-100"
+              >
+                Back Home
+              </button>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
 
     <script src="../scripts/jquery-3.7.1.js"></script>
     <script src="../scripts/index.js"></script>
-</body>
+  </body>
 </html>
