--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body class="font p-3 d-flex align-items-center vh-100 my-2" style="overflow: hidden;"  >
-    <div class="container rounded shadow mainColor text-center ">
-        <div class="row">
-            <h1 class="lightBroun  pt-3">Examination System</h1>
-            <div class="col-lg-6 mx-auto position-relative">
-                <img src="images/start.svg" class="w-75 img-fluid w-sm-100" alt="">
-            </div>
+    <link rel="stylesheet" href="styles/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body
+    class="font p-3 d-flex align-items-center vh-100 my-2"
+    style="overflow: hidden"
+  >
+    <div class="container rounded shadow mainColor text-center">
+      <div class="row">
+        <h1 class="lightBroun pt-3">Examination System</h1>
+        <div class="col-lg-6 mx-auto position-relative">
+          <img src="images/start.svg" class="w-75 img-fluid w-sm-100" alt="" />
         </div>
-        <div class="row pb-4 d-flex justify-content-around">
-            <div class="col-lg-3 mx-auto col-12 col-md-6 flex-sm-column my-2">
-                <a href="signUp/singnUp.html"><button class="btn btn-static lightBroun  w-100">Sign Up</button></a>
-            </div>
-            <div class="col-lg-3 mx-auto col-12 col-md-6 flex-sm-column my-2 ">
-                <a href="signIn/signIn.html"><button class="btn btn-outline brownColor  w-100">Sign In</button></a>
-            </div>
+      </div>
+      <div class="row pb-4 d-flex justify-content-around">
+        <div class="col-lg-3 mx-auto col-12 col-md-6 flex-sm-column my-2">
+          <a href="signUp/singnUp.html"
+            ><button class="btn btn-static lightBroun w-100">Sign Up</button></a
+          >
         </div>
-        
+        <div class="col-lg-3 mx-auto col-12 col-md-6 flex-sm-column my-2">
+          <a href="signIn/signIn.html"
+            ><button class="btn btn-outline lightBroun w-100">
+              Sign In
+            </button></a
+          >
+        </div>
+      </div>
     </div>
-    
-</body>
+  </body>
 </html>
