--- a/timeout/timeOut.html
+++ b/timeout/timeOut.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Time Out</title>
-    <link rel="stylesheet" href="../styles/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/style.css">
-</head>
-<body class="font p-3 d-flex align-items-center justify-content-center vh-100" >
+    <link rel="stylesheet" href="../styles/bootstrap.min.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
+  </head>
+  <body
+    class="font p-3 d-flex align-items-center justify-content-center vh-100"
+  >
     <div class="container my-3 rounded shadow mainColor">
-        <div class="row ">
-            <div  class="col-7 mx-auto  position-relative">
-                <img id="timeOut" src="" class="w-100         img-fluid w-sm-100" alt="">
-                <div class="position-absolute top-0 ">
-                    <img src="../images/Vector.svg" class="w-100 animation"  alt="">
-                </div>
-            </div>
-            <div class="row mb-3 text-center">
-                <h4 id="time"></h4>
-            </div>
+      <div class="row">
+        <div class="col-7 mx-auto position-relative">
+          <img id="timeOut" src="" class="w-100 img-fluid w-sm-100" alt="" />
+          <div class="position-absolute top-0">
+            <img src="../images/Vector.svg" class="w-100 animation" alt="" />
+          </div>
         </div>
-        <div class="row pb-4">
-            
-            <div class="col-lg-3 mx-auto ">
-                <button onclick="backHome()" class="btn btn-static lightBroun p-2 w-100">Go to home</button>
-            </div>
-        <div class="col-lg-3 mx-auto  col-md-6 flex-sm-column my-2 ">
-        <button onclick="logOut()" class="btn btn-outline brownColor  w-100">Log out</button>
-
-    </div>
+        <div class="row mb-3 text-center">
+          <h4 id="time"></h4>
         </div>
+      </div>
+      <div class="row pb-4">
+        <div class="col-lg-3 mx-auto">
+          <button
+            onclick="backHome()"
+            class="btn btn-static lightBroun p-2 w-100"
+          >
+            Go to home
+          </button>
+        </div>
+        <div class="col-lg-3 mx-auto col-md-6 flex-sm-column my-2">
+          <button onclick="logOut()" class="btn btn-outline brownColor w-100">
+            Log out
+          </button>
+        </div>
+      </div>
     </div>
     <script src="../scripts/jquery-3.7.1.js"></script>
     <script src="../scripts/logOut.js"></script>
     <script src="../scripts/timeout.js"></script>
-</body>
+  </body>
 </html>
